cambios lista y agregar propietarios
	modificado: README.md
	renombrado: README.md -> README.md~
	modificado: cobros/cobrosRut.php
	new file:   css/calendar-green.css
	new file:   css/calendar-win2k-cold-1.css
	new file:   css/calendar-win2k-cold-2.css
	new file:   css/demo_page.css
	new file:   css/demo_table.css
	new file:   css/estilo.css
	new file:   css/jquery.ui.base.css
	new file:   css/jquery.ui.theme.css
	new file:   images/database_edit.png
	new file:   images/delete.png
	new file:   images/propietario.png
	modificado: login/login.php
	modificado: login/valida.php
	modificado: logout/logout.php
	modificado: panel/panel.php
	modificado: panel/panel.php~
	modificado: recaudacion/recaudacion.php
	modificado: recaudacion/uploader.php
	renombrado: registroCopropietario/index.php -> registroCopropietario/agregar.php
	modificado: registroCopropietario/controlador.php
	modificado: registroCopropietario/index.php
	modificado: registroCopropietario/index.php~
	modificado: registroCopropietario/style.css
	modificado: registroCopropietario/valida.php
	modificado: registroMedidor/registrom.php
	modificado: registroMedidor/uploader.php

--- a/registroCopropietario/style.css
+++ b/registroCopropietario/style.css
@@ -109,3 +109,36 @@ body div.login button {
 	width: 50%;
 
 }
+#contenidop{
+	width:1060px;
+	background-color: white;
+	color:#999999;
+}
+
+#contenidop table{
+width:1060px;
+margin:auto;
+}
+
+
+
+#contenidop tr:hover{
+background-color:#cccccc;
+border-color:#333333;
+}
+#contenidop th{
+background-color:#303065;
+color:#FFFFFF;
+height:20px;
+}
+#contenidop td{
+color:#000000;
+	border-bottom:1px solid #D3D3D3;
+	padding:0px 0px 0px;
+}
+#contenidop a{
+color:#333333;
+
+}
+
+
